--- a/less/responsive.less
+++ b/less/responsive.less
@@ -248,6 +248,8 @@
 		line-height: 68px;
 		padding: 0px 0px 20px 40px;
 	}
+	
+	/* Naviation */
         .navbar-default .navbar-collapse {
                 position: absolute;
                 top: 96px;
@@ -258,9 +260,28 @@
 		float: left;
         }
         .navbar-default .navbar-nav > li > a {
-                font-size: 22px;
-                /* text-transform: uppercase; */
+                font-size: 18px;
+		padding-right: 10px;
+		padding-left: 10px;
         }
+	.tb-megamenu {
+		& ul.nav li.utility-link {
+			& a {
+				font-size: 15px;	
+			}
+                	&.utility-link {
+                                &.utlk1 {
+                                        padding-right: 185px;
+                                }
+                                &.utlk2 {
+                                        padding-right: 107px;
+                                }
+                                &.utlk3 {
+                                        padding-right: 25px;
+                                }
+                        }	
+		}
+	}
 	.oya-sidebar-nav {
 		& .navbar-collapse {
 			position: relative;
@@ -363,6 +384,31 @@
 
 /* AT MIN LARGE */
 @media (min-width: @screen-lg-min) {
+	/* Navigation */
+	.navbar-default .navbar-nav > li > a {
+                font-size: 22px;
+                padding-right: 15px;
+		padding-left: 15px;
+        }
+	.tb-megamenu {
+		& ul.nav li.utility-link {
+			& a {
+				font-size: 18px;	
+			}
+                	&.utility-link {
+                                &.utlk1 {
+                                        padding-right: 240px;
+                                }
+                                &.utlk2 {
+                                        padding-right: 145px;
+                                }
+                                &.utlk3 {
+                                        padding-right: 45px;
+                                }
+                        }	
+		}
+	}
+
 
         /* OYA - Carousel */
         section#block-views-oya-carousel-block {
